Fix content jumping around
The icon is floating left, but switching to not be floating in the open
dialogs, while the initial box only transitions to its zero height for
the default transition duration.

fixes #44

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -92,7 +92,10 @@ polygon.rs-logo-shape {
   opacity: 1;
 }
 
-/* Initial Connect remote storage box */
+.rs-box-initial {
+  transition-duration: 0ms;
+}
+
 .rs-box-initial:hover {
   cursor: pointer;
 }
